--- a/First.html
+++ b/First.html
@@ -10,29 +10,33 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-
 <div class="container">
   <div class="jumbotron">
     <h1 class="text-center">數據分析</h1>      
     <div class="container">
-  <h2>Pills with Dropdown</h2>
+  <h2>Big Data</h2>
   <ul class="nav nav-pills">
     <li class="nav-item">
-      <a class="nav-link active" href="#">首頁</a>
+      <a class="nav-link active" href="First.html">首頁</a>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">數據</a>
       <div class="dropdown-menu">
         <a class="dropdown-item" href="pay_data.php">新資行情</a>
-        <a class="dropdown-item" href="#">房屋價格</a>
-        <a class="dropdown-item" href="#">Link 3</a></div>
+        <a class="dropdown-item" href="TC_Accident_data.php">台中易肇事路段</a>
+<!--        <a class="dropdown-item" href="#">Link 3</a>-->
+        </div>
     </li>
+<!--
     <li class="nav-item">
       <a class="nav-link" href="#">Link</a>
     </li>
+-->
+<!--
     <li class="nav-item">
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
+-->
   </ul>
 </div>
   </div>  
